@@ -690,11 +690,11 @@ static void functions_builtin(char *function, char **argum,
   double tmp,returnval;
   long functionnum,numargum,cnt;
   int eos=EOS;
-    long N,Nmax,n;
-    int interptype;
-    double *f,*b,*x;
-    double thisx;
-    char *expr;
+  long N,Nmax,n;
+  int interptype;
+  double *f,*b,*x;
+  double thisx;
+  char *expr;
 
   functionnum=0;
   if (strcmp(function,"rad")==0) functionnum=1;
@@ -799,50 +799,14 @@ static void functions_builtin(char *function, char **argum,
       else strcpy(*returnstr,"0");
   }
 
-  if (strcmp(function,"spline")==0) {
+  if (strcmp(function,"interpolate")==0) {
 
     N=SOAP_number_argums(*argum);
-    if (mod(N-1,2)!=0) SOAP_fatal_error(codex,"Number of arguments within spline must be an odd number.");
-    N=(N-1)/2;
-    if (N<4) SOAP_fatal_error(codex,"Number of data points supplied within spline must be at least 4.");
-  
-    x=(double *)malloc(N*sizeof(double));
-    f=(double *)malloc(N*sizeof(double));
-    b=(double *)malloc(N*sizeof(double));
-  
-    for (n=0; n<N; n++) {
-      SOAP_substitute_argum(argum, n*2, codex);    
-      x[n]=SOAP_get_argum_double(codex, *argum, n*2);
-      SOAP_substitute_argum(argum, n*2+1, codex);    
-      f[n]=SOAP_get_argum_double(codex, *argum, n*2+1);
-    }
-    /* check if data points are valid (x[n+1]>x[n]) */
-    for (n=0; n<N-1; n++){
-      if (x[n+1]<=x[n]) SOAP_fatal_error(codex, "Data points supplied to spline must be such that x[i+1]>x[i]."); 
-    }
-
-    SOAP_substitute_argum(argum, N*2, codex);    
-    thisx=SOAP_get_argum_double(codex, *argum, N*2);
-    /* check if point is out of range */
-    if (thisx<x[0] || thisx>x[N-1]) SOAP_fatal_error(codex, "Ensure that x lies between x[0] and x[N].");
-  
-    EXM_find_spline(N, x, f, b);
-    *returnstr=(char *)realloc(*returnstr,maxnumlen*sizeof(char));
-    sprintf(*returnstr,DOUBLEFORMAT,EXM_f_from_spline(N, x, f, b, thisx));
-
-    free(x);
-    free(b);
-    free(f);
-  }
-
-  if (strcmp(function,"Interpolate")==0) {
-
-    N=SOAP_number_argums(*argum);
-    if (mod(N,2)!=0) SOAP_fatal_error(codex,"Number of arguments to Interpolate must be an even number.");
+    if (mod(N,2)!=0) SOAP_fatal_error(codex,"Number of arguments to interpolate() must be an even number.");
     N=N/2-1;
 
     Nmax=9223372036854775807/sizeof(double);
-    if (N>=Nmax) SOAP_fatal_error(codex,"N can not be greater than %ld in Interpolate function part of functions_builtin in soap.c",Nmax);
+    if (N>=Nmax) SOAP_fatal_error(codex,"N can not be greater than %ld in interpolate function part of functions_builtin in soap.c",Nmax);
     // this line is needed to remove compilation error
     N=min(9223372036854775807/sizeof(double),N);
     
@@ -854,7 +818,7 @@ static void functions_builtin(char *function, char **argum,
     if (strcmp(expr,"INTERPOLATE_LINEAR")==0) interptype=INTERPOLATE_LINEAR;
     else if (strcmp(expr,"INTERPOLATE_CUBICSPLINE")==0) interptype=INTERPOLATE_CUBICSPLINE;
     else if (strcmp(expr,"INTERPOLATE_CUBICSPLINEMONOTONE")==0) interptype=INTERPOLATE_CUBICSPLINEMONOTONE;
-    else SOAP_fatal_error(codex,"%s is not a supported interpolation method. Please input INTERPOLATE_LINEAR, INTERPOLATE_CUBICSPLINE or INTERPOLATE_CUBICSPLINEMONOTONE as the first argument to Interpolate.",expr);
+    else SOAP_fatal_error(codex,"%s is not a supported interpolation method. Please input INTERPOLATE_LINEAR, INTERPOLATE_CUBICSPLINE or INTERPOLATE_CUBICSPLINEMONOTONE as the first argument to interpolate().",expr);
 
   
     for (n=0; n<N; n++) {
@@ -865,13 +829,13 @@ static void functions_builtin(char *function, char **argum,
     }
     /* check if data points are valid (x[n+1]>x[n]) */
     for (n=0; n<N-1; n++){
-      if (x[n+1]<=x[n]) SOAP_fatal_error(codex, "Data points supplied to Interpolate must be such that x[i+1]>x[i]."); 
+      if (x[n+1]<=x[n]) SOAP_fatal_error(codex, "Data points supplied to interpolate() must be such that x[i+1]>x[i]."); 
     }
 
     SOAP_substitute_argum(argum, N*2+1, codex);
     thisx=SOAP_get_argum_double(codex, *argum, N*2+1);
     /* check if point is out of range */
-    if (thisx<x[0] || thisx>x[N-1]) SOAP_fatal_error(codex, "Ensure that x lies between x[0] and x[N].");
+    if (thisx<x[0] || thisx>x[N-1]) SOAP_fatal_error(codex, "Ensure that x lies between x[0] and x[N] in interpolate().");
 
     switch(interptype){
       case INTERPOLATE_LINEAR: //linear interpolation
